[tool.poetry]
name = "graph_rl"
version = "0.1.0"
description = "RL-based runtime optimization of computation graphs"
authors = ["Luke Ross"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"
mpi4py = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.3.1"
black = "^20.8b1"
dephell = "^0.8.3"
pytest-mock = "^3.4.0"
toml = "^0.10.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}